--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polar homes | jkia accomodation | Airbnb Services in Syokimau near JKIA</title>
+    <title>Polarhomes | JKIA Accommodation | Airbnb in Syokimau Near JKIA & Nairobi Expressway</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO Meta Tags -->
-    <meta name="title" content="Polar homes | Airbnb Services in Syokimau near JKIA">
-    <meta name="description" content="Accomodation near jkia, sgr and expressway. Explore Polarhomes Airbnb services in Syokimau. We offer clean, affordable, and secure accommodations near JKIA and Nairobi Expressway. Ideal for short stays, long stays, and business travelers.">
-    <meta name="keywords" content="jkia accomodation, sgr accomodation, near express way accomodation, Polarhomes Airbnb, Airbnb Syokimau, JKIA stays, Nairobi Expressway rentals, affordable Airbnb Kenya, airport accommodations, short-term rentals JKIA, Airbnb Nairobi Kenya, furnished apartment Nairobi, business travel Syokimau, Polar homes, Airbnb near airport Nairobi, cozy rental Nairobi, secure Airbnb Syokimau">
-    <meta name="author" content="Polar homes">
-	<meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Polarhomes | JKIA Accommodation | Airbnb in Syokimau Near Airport">
+    <meta name="description" content="Looking for affordable, secure JKIA accommodation? Polarhomes offers cozy, fully furnished Airbnb rentals near JKIA, SGR, and Nairobi Expressway in Syokimau. Ideal for short or long stays, business travel, and layovers.">
+    <meta name="keywords" content="JKIA accommodation, Airbnb JKIA, Syokimau stays, Nairobi airport rooms, Polarhomes, short term rentals Nairobi, Nairobi Expressway Airbnb, SGR Nairobi stay, furnished apartments Nairobi, JKIA airport Airbnb, safe Airbnb Nairobi, business accommodation JKIA, Syokimau lodging, budget Airbnb near JKIA, Nairobi overnight stay, Nairobi guest house near airport">
+    <meta name="author" content="Polarhomes">
+    <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/">
-    <meta property="og:title" content="Polarhomes | Airbnb Services in Nairobi near JKIA">
-    <meta property="og:description" content="Discover our Airbnb services at Polarhomes. Safe, stylish, and convenient rentals close to JKIA and Nairobi Expressway in Syokimau.">
+    <meta property="og:title" content="Polarhomes | Best JKIA Accommodation & Airbnb in Nairobi">
+    <meta property="og:description" content="Book safe and affordable Airbnb near JKIA. Polarhomes offers clean, stylish rentals in Syokimau near SGR, Nairobi Expressway, and JKIA Airport.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/">
-    <meta name="twitter:title" content="Polarhomes | Airbnb Services near JKIA, Nairobi">
-    <meta name="twitter:description" content="Affordable Airbnb services near JKIA, Nairobi Expressway, and Syokimau. Short stay, long stay, and business lodging at Polarhomes.">
+    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Accommodation Near JKIA, Nairobi">
+    <meta name="twitter:description" content="Stay near JKIA Airport with Polarhomes Airbnb in Syokimau. Fully furnished, secure, and affordable accommodations for short or long term stays.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
@@ -32,11 +33,12 @@
     {
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
-      "name": "Polar homes",
+      "name": "Polarhomes",
       "image": "https://www.polarhomes.org/img/logo.jpg",
-      "@id": "https://www.polarhomes.org/",
-      "url": "https://www.polarhomes.org/",
-      "telephone": "+254 723 225 791",
+      "@id": "https://www.polarhomes.org",
+      "url": "https://www.polarhomes.org",
+      "telephone": "+254723225791",
+      "priceRange": "$$",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Syokimau, Nairobi",
@@ -49,13 +51,14 @@
         "latitude": -1.3308,
         "longitude": 36.9274
       },
-      "description": "Polarhomes offers Airbnb accommodations near JKIA Airport and Nairobi Expressway in Syokimau. Enjoy clean, secure, and fully-furnished short or long-term stays.",
+      "description": "Polarhomes offers Airbnb accommodation near JKIA Airport and Nairobi Expressway. Enjoy safe, stylish, and affordable short-term and long-term rentals in Syokimau.",
       "amenityFeature": [
         { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Parking", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Airport Proximity", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Fully Furnished", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Secure Premises", "value": true }
+        { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Proximity to JKIA Airport", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Close to SGR & Expressway", "value": true }
       ]
     }
     </script>
@@ -63,26 +66,25 @@
     <!-- Favicon -->
     <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
-    <!-- Google Web Fonts -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
 
-    <!-- Icon Font Stylesheet -->
+    <!-- Icon Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
+    <!-- Library Stylesheets -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
+    <!-- Bootstrap and Template Styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 
 
 <body>
