--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Polarhomes | JKIA Accommodation | Airbnb in Syokimau Near JKIA & Nairobi Expressway</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.polarhomes.org/" />
+
     <!-- Primary Meta Tags -->
     <meta name="title" content="Polarhomes | JKIA Accommodation | Airbnb in Syokimau Near Airport">
     <meta name="description" content="Looking for affordable, secure JKIA accommodation? Polarhomes offers cozy, fully furnished Airbnb rentals near JKIA, SGR, and Nairobi Expressway in Syokimau. Ideal for short or long stays, business travel, and layovers.">
