--- a/about.html
+++ b/about.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+    <head>
     <meta charset="utf-8">
-    <title>About Us | Accomodation near jkia, sgr and expressway. | Polarhomes Airbnb syokimau near JKIA Nairobi</title>
+    <title>JKIA Accommodation | About Us - Polarhomes Airbnb in Syokimau Nairobi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <meta name="title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
-    <meta name="description" content="Accomodation near jkia, sgr and expressway. Learn more about Polarhomes – a trusted Airbnb hosting service near JKIA Airport and Syokimau in in design makumbi park. Discover who we are, our mission, and why travelers trust us for safe, stylish, and convenient stays.">
-    <meta name="keywords" content="Accomodation near jkia, sgr and expressway accomodation, airbnb makumbi, makumbi in design park, About Polarhomes, Airbnb Syokimau, Airbnb near JKIA, Nairobi Airbnb host, Airbnb Kenya, Polarhomes JKIA, Nairobi Expressway stay, short stay Kenya, apartment host Nairobi">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.polarhomes.org/about">
+
+    <meta name="title" content="JKIA Accommodation | About Polarhomes Airbnb Syokimau">
+    <meta name="description" content="Looking for JKIA accommodation? Learn more about Polarhomes – your trusted Airbnb near JKIA, SGR, and Nairobi Expressway in Syokimau. Safe, clean, and affordable stays.">
+    <meta name="keywords" content="JKIA accommodation, Syokimau Airbnb, Nairobi airport stays, SGR Nairobi accommodation, expressway rental, makumbi Airbnb, Polarhomes JKIA, Airbnb Kenya, short-term apartment Nairobi, Polarhomes About Us">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/about">
-    <meta property="og:title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
-    <meta property="og:description" content="Get to know Polarhomes – Your go-to Airbnb service near JKIA and Nairobi Expressway. Reliable, secure, and stylish homes.">
+    <meta property="og:title" content="JKIA Accommodation | About Polarhomes Airbnb Syokimau">
+    <meta property="og:description" content="Discover Polarhomes – Safe and stylish Airbnb options near JKIA and Nairobi Expressway. Learn more about us and why travelers trust our accommodations.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/about">
-    <meta name="twitter:title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
-    <meta name="twitter:description" content="Discover why guests choose Polarhomes Airbnb in Syokimau near JKIA. Meet the team and our values.">
+    <meta name="twitter:title" content="About Polarhomes | Trusted JKIA Accommodation in Nairobi">
+    <meta name="twitter:description" content="Meet the team behind Polarhomes – premium Airbnb service near JKIA. Convenient for airport travelers, SGR passengers, and business guests.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
@@ -31,9 +35,9 @@
     {
       "@context": "https://schema.org",
       "@type": "AboutPage",
-      "name": "About Us | Polarhomes",
-      "url": "https://www.polarhomes.org//about",
-      "description": "Polarhomes provides high-quality Airbnb accommodations near JKIA and Syokimau. Learn about our values, team, and commitment to comfort and security.",
+      "name": "About Polarhomes | JKIA Accommodation",
+      "url": "https://www.polarhomes.org/about",
+      "description": "Polarhomes offers reliable Airbnb stays near JKIA Airport, SGR, and the Nairobi Expressway. Learn about our mission and hospitality promise.",
       "publisher": {
         "@type": "Organization",
         "name": "Polarhomes",
@@ -69,7 +73,6 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
-
 
 <body>
     <div class="container-xxl bg-white p-0">
