--- a/booking.html
+++ b/booking.html
@@ -3,28 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Book Your Stay | Polarhomes Accomodation near JKIA Nairobi</title>
+    <title>JKIA Accommodation Booking | Polarhomes Airbnb Nairobi Syokimau</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <meta name="title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
-    <meta name="description" content="jkia accomodation, Book a secure, fully-furnished Airbnb apartment with Polarhomes near JKIA Airport, Syokimau, and Nairobi Expressway. Enjoy a seamless booking process, great rates, and excellent service.">
-    <meta name="keywords" content="accomodation near jkia, jkia accomodation, sgr accomodation, expressway accomodation, book Polarhomes, Airbnb booking JKIA, Airbnb Syokimau, Nairobi Expressway Airbnb, Polar homes booking, Kenya Airbnb rental, reserve Airbnb Nairobi, Polarhomes apartment booking, airport stay Nairobi, Airbnb Kenya booking">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.polarhomes.org/booking">
+
+    <meta name="title" content="JKIA Accommodation Booking | Polarhomes Airbnb Nairobi Syokimau">
+    <meta name="description" content="Secure JKIA accommodation with Polarhomes – book fully-furnished, stylish Airbnb apartments in Syokimau, near SGR, Expressway, and Nairobi Airport. Best for layovers, business, or travel.">
+    <meta name="keywords" content="JKIA accommodation, accommodation near JKIA, book Airbnb JKIA, Syokimau Airbnb, Nairobi Expressway stay, SGR accommodation, Nairobi airport apartment, Polarhomes booking, Kenya Airbnb, airport hotel alternative, expressway apartment, JKIA short stay">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/booking">
-    <meta property="og:title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
-    <meta property="og:description" content="Reserve a beautiful and secure Airbnb apartment near JKIA with Polarhomes. Simple online booking process available now.">
+    <meta property="og:title" content="Book Accommodation near JKIA Nairobi | Polarhomes Airbnb">
+    <meta property="og:description" content="Easily book secure and affordable JKIA accommodation near Nairobi Expressway & Syokimau. Trusted Airbnb provider – Polarhomes.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/booking">
-    <meta name="twitter:title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
-    <meta name="twitter:description" content="Seamlessly book your Airbnb apartment with Polarhomes near JKIA, Nairobi Expressway, and Syokimau.">
+    <meta name="twitter:title" content="JKIA Accommodation | Polarhomes Booking Page">
+    <meta name="twitter:description" content="Book a modern, fully-furnished apartment near JKIA Nairobi through Polarhomes. Ideal short stays, long stays, and transit bookings.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
@@ -32,9 +35,9 @@
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "Book Your Stay | Polarhomes",
+      "name": "JKIA Accommodation Booking | Polarhomes",
       "url": "https://www.polarhomes.org/booking",
-      "description": "Book fully-furnished Airbnb apartments near JKIA, Nairobi Expressway, and Syokimau with Polarhomes.",
+      "description": "Book stylish, secure, and affordable Airbnb apartments near JKIA Airport, Nairobi Expressway, and Syokimau with Polarhomes.",
       "mainEntity": {
         "@type": "LodgingReservation",
         "reservationFor": {
@@ -60,6 +63,30 @@
       }
     }
     </script>
+
+    <!-- Favicon -->
+    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+</head>
 
     <!-- Favicon -->
     <link href="img/logo.jpg" rel="icon" type="image/x-icon">
