--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
+        <!-- SEO Meta Tags -->
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.polarhomes.org/contact">
     <meta name="title" content="Contact Polarhomes | Airbnb Syokimau near JKIA">
     <meta name="description" content="Jkia accomodation, accomodation near jkia, Get in touch with Polarhomes for secure, affordable, and fully-furnished Airbnb rentals near JKIA, Syokimau, and the Nairobi Expressway. We're here to assist with your booking or inquiries.">
     <meta name="keywords" content="accomodation near jkia, jkia accomodation, sgr accomodation, expressway accomodation, contact Polarhomes, Airbnb Syokimau contact, JKIA Airbnb host, Polar homes Kenya, Nairobi Airbnb contact, book Airbnb JKIA, reach Polarhomes, Airbnb Kenya customer care, furnished rental support, Airbnb Nairobi Expressway host, Polarhomes phone number">
