--- a/room.html
+++ b/room.html
@@ -3,10 +3,15 @@
     <title>Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+
     <!-- Primary SEO Meta Tags -->
-    <meta name="title" content="Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway">
+    <meta name="title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
     <meta name="description" content="Book cozy, affordable rooms near JKIA airport in Syokimau. Polarhomes offers secure, stylish Airbnbs along the Nairobi Expressway, perfect for travelers & short stays.">
-    <meta name="keywords" content="polarhomes, airbnb near JKIA, rooms near JKIA, syokimau airbnb, Nairobi expressway accommodation, short stay Nairobi, inedesign Makumbi Park, apartments JKIA, JKIA rooms, airbnb syokimau, polarhomes syokimau, near airport nairobi, airbnb near expressway">
+    <meta name="keywords" content="jkia accommodation, syokimau airbnb, nairobi airport stay, sgr accommodation, polarhomes airbnb, expressway room rental, airport guesthouse, short stay near JKIA, affordable jkia lodging, syokimau furnished apartment, secure airbnb syokimau, nairobi airport apartment, polarhomes nairobi, rooms with wifi jkia, polarhomes kenya, polarhomes, airbnb near JKIA, rooms near JKIA, syokimau airbnb, Nairobi expressway accommodation, short stay Nairobi, inedesign Makumbi Park, apartments JKIA, JKIA rooms, airbnb syokimau, polarhomes syokimau, near airport nairobi, airbnb near expressway">
     <meta name="author" content="Polarhomes">
 	<meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
