--- a/service-detail.html
+++ b/service-detail.html
@@ -6,6 +6,11 @@
     <title>Polarhomes | Service Details | Airbnb in Syokimau near JKIA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    	  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+
     <!-- SEO Meta Tags -->
     <meta name="title" content="Polarhomes | Room Details | Airbnb near JKIA, Nairobi Expressway">
     <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
