--- a/service-detail.html
+++ b/service-detail.html
@@ -32,6 +32,26 @@
     <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
+     <!-- Schema.org JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AboutPage",
+      "name": "About Polarhomes | JKIA Accommodation",
+      "url": "https://www.polarhomes.org/about",
+      "description": "Polarhomes offers reliable Airbnb stays near JKIA Airport, SGR, and the Nairobi Expressway. Learn about our mission and hospitality promise.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Polarhomes",
+        "url": "https://www.polarhomes.org/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.polarhomes.org/img/logo.jpg"
+        }
+      }
+    }
+    </script>
+
     <!-- Favicon -->
     <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
