--- a/service.html
+++ b/service.html
@@ -6,10 +6,15 @@
     <title>Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        	  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+
     <!-- Primary Meta Tags -->
     <meta name="title" content="Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway">
     <meta name="description" content="Book cozy, affordable Airbnb rooms in Syokimau near JKIA and Nairobi Expressway. Safe, stylish, and perfect for short stays.">
-    <meta name="keywords" content="polarhomes, Airbnb JKIA, Syokimau Airbnb, rooms near Nairobi Expressway, short stay Nairobi, Makumbi Park apartments, airbnb syokimau, affordable airbnb Nairobi, JKIA lodging, Nairobi airport stay">
+    <meta name="keywords" content="jkia accomodation, accomodation near jkia, polarhomes, Airbnb JKIA, Syokimau Airbnb, rooms near Nairobi Expressway, short stay Nairobi, Makumbi Park apartments, airbnb syokimau, affordable airbnb Nairobi, JKIA lodging, Nairobi airport stay">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
