--- a/testimonial.html
+++ b/testimonial.html
@@ -6,10 +6,15 @@
     <title>Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near JKIA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        	  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+
     <!-- SEO Meta Tags -->
     <meta name="title" content="Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near JKIA">
-    <meta name="description" content="Read real testimonials and honest guest reviews about Polarhomes Airbnb stays near JKIA airport and Nairobi Expressway. See why guests love our clean, secure, and stylish accommodations.">
-    <meta name="keywords" content="Polarhomes reviews, Polarhomes testimonials, Airbnb reviews JKIA, guest reviews Syokimau, Nairobi Airbnb feedback, Nairobi airport lodging reviews, short stay reviews Syokimau, Airbnb Kenya experiences, Polarhomes customer experiences, trusted Airbnb Nairobi, Airbnb near Nairobi Expressway, clean Airbnb Syokimau, safe Airbnb Nairobi">
+    <meta name="description" content="jkia accomodation, accomodation near jkia, Read real testimonials and honest guest reviews about Polarhomes Airbnb stays near JKIA airport and Nairobi Expressway. See why guests love our clean, secure, and stylish accommodations.">
+    <meta name="keywords" content="jkia accomodation, accomodation near jkia, Polarhomes reviews, Polarhomes testimonials, Airbnb reviews JKIA, guest reviews Syokimau, Nairobi Airbnb feedback, Nairobi airport lodging reviews, short stay reviews Syokimau, Airbnb Kenya experiences, Polarhomes customer experiences, trusted Airbnb Nairobi, Airbnb near Nairobi Expressway, clean Airbnb Syokimau, safe Airbnb Nairobi">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
