--- a/testimonial.html
+++ b/testimonial.html
@@ -32,6 +32,41 @@
     <meta name="twitter:description" content="Trusted by hundreds of guests – read genuine reviews about Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Clean, secure, and cozy.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
+     <!-- Schema.org JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LodgingBusiness",
+      "name": "Polarhomes",
+      "image": "https://www.polarhomes.org/img/logo.jpg",
+      "@id": "https://www.polarhomes.org/testimonial",
+      "url": "https://www.polarhomes.org/testimonial",
+      "telephone": "+254723225791",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Syokimau, Nairobi",
+        "addressLocality": "Nairobi",
+        "postalCode": "00100",
+        "addressCountry": "KE"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -1.3308,
+        "longitude": 36.9274
+      },
+      "description": "Polarhomes offers Airbnb accommodation near JKIA Airport and Nairobi Expressway. Enjoy safe, stylish, and affordable short-term and long-term rentals in Syokimau.",
+      "amenityFeature": [
+        { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Proximity to JKIA Airport", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Close to SGR & Expressway", "value": true }
+      ]
+    }
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 
