--- a/room-details.html
+++ b/room-details.html
@@ -8,6 +8,10 @@
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <link rel="canonical" href="https://polarhomes.org/room-details.html?room=studio" />
+  <link rel="canonical" href="https://www.polarhomes.org/room-details.html?room=executive" />
+  <link rel="canonical" href="https://www.polarhomes.org/room-details.html?room=2bedroom" />
+  <link rel="canonical" href="https://www.polarhomes.org/room-details.html?room=4bedroom" />
 
   <!-- SEO Meta Tags -->
   <meta name="title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
