--- a/service-detail.html
+++ b/service-detail.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <link rel="canonical" href="https://www.polarhomes.org/service-detail" />
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
 
@@ -20,14 +20,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/room-details">
+    <meta property="og:url" content="https://www.polarhomes.org/service-detail">
     <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
     <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/room-details">
+    <meta name="twitter:url" content="https://www.polarhomes.org/service-detail">
     <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
     <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
@@ -35,21 +35,26 @@
      <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
-      "@type": "AboutPage",
-      "name": "About Polarhomes | JKIA Accommodation",
-      "url": "https://www.polarhomes.org/about",
-      "description": "Polarhomes offers reliable Airbnb stays near JKIA Airport, SGR, and the Nairobi Expressway. Learn about our mission and hospitality promise.",
-      "publisher": {
-        "@type": "Organization",
-        "name": "Polarhomes",
-        "url": "https://www.polarhomes.org/",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://www.polarhomes.org/img/logo.jpg"
-        }
-      }
+     {
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Polarhomes Service Details | Airbnb Syokimau JKIA",
+  "url": "https://www.polarhomes.org/service-detail.html",
+  "description": "Full details for this Polarhomes Airbnb service near JKIA including pricing, features, and amenities.",
+  "isPartOf": {
+    "@type": "WebSite",
+    "url": "https://www.polarhomes.org/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Polarhomes",
+    "url": "https://www.polarhomes.org/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://www.polarhomes.org/img/logo.jpg"
     }
+  }
+}
     </script>
 
     <!-- Favicon -->
