--- a/service-detail.html
+++ b/service-detail.html
@@ -2,83 +2,84 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Polarhomes | Service Details | Airbnb in Syokimau near JKIA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Polarhomes | Service Details | Airbnb in Syokimau near JKIA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/service-detail" />
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.polarhomes.org/service-detail.html" />
+  
+  <!-- Robots -->
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
 
-    <!-- SEO Meta Tags -->
-    <meta name="title" content="Polarhomes | Room Details | Airbnb near JKIA, Nairobi Expressway">
-    <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
-    <meta name="keywords" content="Polarhomes room details, Airbnb room near JKIA, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
-    <meta name="author" content="Polarhomes">
-    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <!-- SEO Meta Tags -->
+  <meta name="title" content="Polarhomes | Room Details | Airbnb near JKIA, Nairobi Expressway">
+  <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
+  <meta name="keywords" content="Polarhomes room details, Airbnb room near JKIA, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
+  <meta name="author" content="Polarhomes">
+  <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/service-detail">
-    <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
-    <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.polarhomes.org/service-detail.html">
+  <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
+  <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
+  <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/service-detail">
-    <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
-    <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.polarhomes.org/service-detail.html">
+  <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
+  <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
+  <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
-     <!-- Schema.org JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-     {
-  "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Polarhomes Service Details | Airbnb Syokimau JKIA",
-  "url": "https://www.polarhomes.org/service-detail.html",
-  "description": "Full details for this Polarhomes Airbnb service near JKIA including pricing, features, and amenities.",
-  "isPartOf": {
-    "@type": "WebSite",
-    "url": "https://www.polarhomes.org/"
-  },
-  "publisher": {
-    "@type": "Organization",
-    "name": "Polarhomes",
-    "url": "https://www.polarhomes.org/",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://www.polarhomes.org/img/logo.jpg"
+  <!-- Schema.org JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Polarhomes Service Details | Airbnb Syokimau JKIA",
+    "url": "https://www.polarhomes.org/service-detail.html",
+    "description": "Full details for this Polarhomes Airbnb service near JKIA including pricing, features, and amenities.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.polarhomes.org/"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Polarhomes",
+      "url": "https://www.polarhomes.org/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.polarhomes.org/img/logo.jpg"
+      }
     }
   }
-}
-    </script>
+  </script>
 
-    <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+  <!-- Favicon -->
+  <link href="https://www.polarhomes.org/img/logo.jpg" rel="icon" type="image/x-icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Google Web Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Icon Font Stylesheets -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Icon Font Stylesheets -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheets -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <!-- Libraries Stylesheets -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Customized Bootstrap Stylesheet -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Template Stylesheet -->
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
