--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/" />
+  <link rel="canonical" href="https://polarhomes.org/" />
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="Polarhomes | JKIA Accommodation | Airbnb in Syokimau Near Airport">
@@ -19,17 +19,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/">
+    <meta property="og:url" content="https://polarhomes.org/">
     <meta property="og:title" content="Polarhomes | Best JKIA Accommodation & Airbnb in Nairobi">
     <meta property="og:description" content="Book safe and affordable Airbnb near JKIA. Polarhomes offers clean, stylish rentals in Syokimau near SGR, Nairobi Expressway, and JKIA Airport.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/">
+    <meta name="twitter:url" content="https://polarhomes.org/">
     <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Accommodation Near JKIA, Nairobi">
     <meta name="twitter:description" content="Stay near JKIA Airport with Polarhomes Airbnb in Syokimau. Fully furnished, secure, and affordable accommodations for short or long term stays.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -37,9 +37,9 @@
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
       "name": "Polarhomes",
-      "image": "https://www.polarhomes.org/img/logo.jpg",
-      "@id": "https://www.polarhomes.org",
-      "url": "https://www.polarhomes.org",
+      "image": "https://polarhomes.org/img/logo.jpg",
+      "@id": "https://polarhomes.org",
+      "url": "https://polarhomes.org",
       "telephone": "+254723225791",
       "priceRange": "$$",
       "address": {
