--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
     <!-- SEO Meta Tags -->
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.polarhomes.org/about">
+    <link rel="canonical" href="https://polarhomes.org/about">
 
     <meta name="title" content="JKIA Accommodation | About Polarhomes Airbnb Syokimau">
     <meta name="description" content="Looking for JKIA accommodation? Learn more about Polarhomes – your trusted Airbnb near JKIA, SGR, and Nairobi Expressway in Syokimau. Safe, clean, and affordable stays.">
@@ -18,17 +18,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/about">
+    <meta property="og:url" content="https://polarhomes.org/about">
     <meta property="og:title" content="JKIA Accommodation | About Polarhomes Airbnb Syokimau">
     <meta property="og:description" content="Discover Polarhomes – Safe and stylish Airbnb options near JKIA and Nairobi Expressway. Learn more about us and why travelers trust our accommodations.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/about">
+    <meta name="twitter:url" content="https://polarhomes.org/about">
     <meta name="twitter:title" content="About Polarhomes | Trusted JKIA Accommodation in Nairobi">
     <meta name="twitter:description" content="Meet the team behind Polarhomes – premium Airbnb service near JKIA. Convenient for airport travelers, SGR passengers, and business guests.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -36,15 +36,15 @@
       "@context": "https://schema.org",
       "@type": "AboutPage",
       "name": "About Polarhomes | JKIA Accommodation",
-      "url": "https://www.polarhomes.org/about",
+      "url": "https://polarhomes.org/about",
       "description": "Polarhomes offers reliable Airbnb stays near JKIA Airport, SGR, and the Nairobi Expressway. Learn about our mission and hospitality promise.",
       "publisher": {
         "@type": "Organization",
         "name": "Polarhomes",
-        "url": "https://www.polarhomes.org/",
+        "url": "https://polarhomes.org/",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://www.polarhomes.org/img/logo.jpg"
+          "url": "https://polarhomes.org/img/logo.jpg"
         }
       }
     }
