--- a/booking.html
+++ b/booking.html
@@ -8,7 +8,7 @@
 
     <!-- SEO Meta Tags -->
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.polarhomes.org/booking">
+    <link rel="canonical" href="https://polarhomes.org/booking">
 
     <meta name="title" content="JKIA Accommodation Booking | Polarhomes Airbnb Nairobi Syokimau">
     <meta name="description" content="Secure JKIA accommodation with Polarhomes – book fully-furnished, stylish Airbnb apartments in Syokimau, near SGR, Expressway, and Nairobi Airport. Best for layovers, business, or travel.">
@@ -18,17 +18,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/booking">
+    <meta property="og:url" content="https://polarhomes.org/booking">
     <meta property="og:title" content="Book Accommodation near JKIA Nairobi | Polarhomes Airbnb">
     <meta property="og:description" content="Easily book secure and affordable JKIA accommodation near Nairobi Expressway & Syokimau. Trusted Airbnb provider – Polarhomes.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/booking">
+    <meta name="twitter:url" content="https://polarhomes.org/booking">
     <meta name="twitter:title" content="JKIA Accommodation | Polarhomes Booking Page">
     <meta name="twitter:description" content="Book a modern, fully-furnished apartment near JKIA Nairobi through Polarhomes. Ideal short stays, long stays, and transit bookings.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -36,7 +36,7 @@
       "@context": "https://schema.org",
       "@type": "WebPage",
       "name": "JKIA Accommodation Booking | Polarhomes",
-      "url": "https://www.polarhomes.org/booking",
+      "url": "https://polarhomes.org/booking",
       "description": "Book stylish, secure, and affordable Airbnb apartments near JKIA Airport, Nairobi Expressway, and Syokimau with Polarhomes.",
       "mainEntity": {
         "@type": "LodgingReservation",
@@ -58,7 +58,7 @@
         "provider": {
           "@type": "Organization",
           "name": "Polarhomes",
-          "url": "https://www.polarhomes.org"
+          "url": "https://polarhomes.org"
         }
       }
     }
