--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-        <!-- SEO Meta Tags -->
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.polarhomes.org/contact">
+    <link rel="canonical" href="https://polarhomes.org/contact">
     <meta name="title" content="Contact Polarhomes | Airbnb Syokimau near JKIA">
     <meta name="description" content="Jkia accomodation, accomodation near jkia, Get in touch with Polarhomes for secure, affordable, and fully-furnished Airbnb rentals near JKIA, Syokimau, and the Nairobi Expressway. We're here to assist with your booking or inquiries.">
     <meta name="keywords" content="accomodation near jkia, jkia accomodation, sgr accomodation, expressway accomodation, contact Polarhomes, Airbnb Syokimau contact, JKIA Airbnb host, Polar homes Kenya, Nairobi Airbnb contact, book Airbnb JKIA, reach Polarhomes, Airbnb Kenya customer care, furnished rental support, Airbnb Nairobi Expressway host, Polarhomes phone number">
@@ -18,17 +17,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/contact">
+    <meta property="og:url" content="https://polarhomes.org/contact">
     <meta property="og:title" content="Contact Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
     <meta property="og:description" content="Reach out to Polarhomes for assistance, bookings, or Airbnb inquiries in Nairobi, Syokimau, or near JKIA.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/contact">
+    <meta name="twitter:url" content="https://polarhomes.org/contact">
     <meta name="twitter:title" content="Contact Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
     <meta name="twitter:description" content="Contact us today to book or inquire about Airbnb stays in Syokimau and around JKIA.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -36,15 +35,15 @@
       "@context": "https://schema.org",
       "@type": "ContactPage",
       "name": "Contact Polarhomes",
-      "url": "https://www.polarhomes.org/contact",
+      "url": "https://polarhomes.org/contact",
       "mainEntity": {
         "@type": "Organization",
         "name": "Polarhomes",
-        "url": "https://www.polarhomes.org/",
-        "logo": "https://www.polarhomes.org/img/logo.jpg",
+        "url": "https://polarhomes.org/",
+        "logo": "https://polarhomes.org/img/logo.jpg",
         "contactPoint": {
           "@type": "ContactPoint",
-          "telephone": "+254 723 225 791",
+          "telephone": "+254723225791",
           "contactType": "Customer Service",
           "areaServed": "KE",
           "availableLanguage": ["English", "Swahili"]
