--- a/room-details.html
+++ b/room-details.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <link rel="canonical" href="https://polarhomes.org/room-details" />
 
   <!-- SEO Meta Tags -->
   <meta name="title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
@@ -24,14 +24,14 @@
   <meta property="og:url" content="https://www.polarhomes.org/room-details">
   <meta property="og:title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau">
   <meta property="og:description" content="Explore Polarhomes Airbnb rooms near JKIA. Affordable, modern, and secure stays in Syokimau with fast Wi-Fi and access to Nairobi Expressway.">
-  <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://www.polarhomes.org/room-details">
+  <meta name="twitter:url" content="https://polarhomes.org/room-details">
   <meta name="twitter:title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau">
   <meta name="twitter:description" content="See Polarhomes Airbnb details near JKIA & Nairobi Expressway. Clean, affordable short stays with all amenities in Syokimau.">
-  <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
   <!-- Favicon -->
   <link href="img/logo.jpg" rel="icon" type="image/x-icon">
@@ -42,8 +42,8 @@
     "@context": "https://schema.org",
     "@type": "LodgingBusiness",
     "name": "Polarhomes",
-    "image": "https://www.polarhomes.org/img/logo.jpg",
-    "url": "https://www.polarhomes.org/room-details",
+    "image": "https://polarhomes.org/img/logo.jpg",
+    "url": "https://polarhomes.org/room-details",
     "telephone": "+254723225791",
     "priceRange": "$$",
     "address": {
