--- a/room.html
+++ b/room.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <link rel="canonical" href="https://polarhomes.org/room-details" />
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
 
@@ -17,17 +17,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/room">
+    <meta property="og:url" content="https://polarhomes.org/room">
     <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
     <meta property="og:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near JKIA and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/room">
+    <meta name="twitter:url" content="https://polarhomes.org/room">
     <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
     <meta name="twitter:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near JKIA and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+    <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -35,7 +35,7 @@
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
       "name": "Polarhomes",
-      "image": "https://www.polarhomes.org/img/logo.jpg",
+      "image": "https://polarhomes.org/img/logo.jpg",
       "description": "Polarhomes offers well-furnished, secure short-stay apartments and Airbnb rooms in Syokimau, near JKIA and the Nairobi Expressway.",
       "address": {
         "@type": "PostalAddress",
@@ -48,8 +48,8 @@
         "latitude": -1.36202,
         "longitude": 36.95185
       },
-      "url": "https://www.polarhomes.org/room",
-      "telephone": "+254 723 225 791",
+      "url": "https://polarhomes.org/room",
+      "telephone": "+254723225791",
       "priceRange": "$$",
       "amenityFeature": [
         { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
