--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/room-details" />
+  <link rel="canonical" href="https://polarhomes.org/room-details" />
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
 
