--- a/service-detail.html
+++ b/service-detail.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://polarhomes.org/service-detail.html" />
+  <link rel="canonical" href="https://www.polarhomes.org/service-detail.html" />
   
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -22,17 +22,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://polarhomes.org/service-detail.html">
+  <meta property="og:url" content="https://www.polarhomes.org/service-detail.html">
   <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
   <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
   <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://polarhomes.org/service-detail.html">
+  <meta name="twitter:url" content="https://www.polarhomes.org/service-detail.html">
   <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
   <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
-  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
   <!-- Schema.org JSON-LD Structured Data -->
   <script type="application/ld+json">
@@ -40,26 +40,26 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Polarhomes Service Details | Airbnb Syokimau JKIA",
-    "url": "https://polarhomes.org/service-detail.html",
+    "url": "https://www.polarhomes.org/service-detail.html",
     "description": "Full details for this Polarhomes Airbnb service near JKIA including pricing, features, and amenities.",
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://polarhomes.org/"
+      "url": "https://www.polarhomes.org/"
     },
     "publisher": {
       "@type": "Organization",
       "name": "Polarhomes",
-      "url": "https://polarhomes.org/",
+      "url": "https://www.polarhomes.org/",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://polarhomes.org/img/logo.jpg"
+        "url": "https://www.polarhomes.org/img/logo.jpg"
       }
     }
   }
   </script>
 
   <!-- Favicon -->
-  <link href="https://polarhomes.org/img/logo.jpg" rel="icon" type="image/x-icon">
+  <link href="https://www.polarhomes.org/img/logo.jpg" rel="icon" type="image/x-icon">
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
